[gd_scene load_steps=6 format=3 uid="uid://bq40tbyetv50f"]

[ext_resource type="Script" uid="uid://cyl20v6e0d00c" path="res://scripts/menu_pause.gd" id="1_v7adk"]
[ext_resource type="FontFile" uid="uid://dcs5blrcur66r" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_gngfg"]
[ext_resource type="Shader" uid="uid://freeh6ljyrky" path="res://shaders/menu_pause.gdshader" id="2_vhydp"]
[ext_resource type="FontFile" uid="uid://c6vjbobj4r01s" path="res://assets/fonts/PixelOperator8.ttf" id="3_vhydp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gngfg"]
shader = ExtResource("2_vhydp")
shader_parameter/amount = 2.0

[node name="MenuPause" type="Control"]
process_mode = 2
show_behind_parent = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7adk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
material = SubResource("ShaderMaterial_gngfg")
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gngfg")
theme_override_font_sizes/font_size = 32
text = "PAUSE"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vhydp")
theme_override_font_sizes/font_size = 16
text = "Resume"

[node name="BackToMainButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vhydp")
theme_override_font_sizes/font_size = 16
text = "Back to main"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vhydp")
theme_override_font_sizes/font_size = 16
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackToMainButton" to="." method="_on_back_to_main_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
